--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ VCS = git
 style = pep440
 versionfile_source = openff/nagl_models/_version.py
 versionfile_build = openff/nagl_models/_version.py
-tag_prefix = ''
+tag_prefix = 'v'
 
 [aliases]
 test = pytest
