--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,10 @@ testpaths = [
     "openff/nagl_models/tests",
 ]
 
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "openff/nagl_models/_version.py"
+versionfile_build = "openff/nagl_models/_version.py"
+tag_prefix = "v"
+parentdir_prefix = "openff-nagl-models-" 
