fix typo in deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,12 @@
 name: Build and upload to PyPi
 
 on:
+  push:
+    tags:
+      - "*"
   release:
     types:
-      - published  # for both stable and pre-releases
+      - published
 
 jobs:
   pypi_push:
@@ -24,7 +27,7 @@ jobs:
           package_name: 'openff-nagl-models'
 
       - name: pypi_deploy
-        uses: MDAnalysis/pypi-deployments@main
+        uses: MDAnalysis/pypi-deployment@main
         if: github.event_name == 'release' && github.event.action == 'published'
         with:
           token: ${{ secrets.PYPI_UPLOAD_TOKEN }}
