add importlib_resources to dependencies

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,7 @@ jobs:
           package_name: 'openff-nagl-models'
           module_name: 'openff.nagl_models'
           wheels: false
+          test_deps: "pytest numpy"
 
   pypi_push:
     environment:
