--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,7 +34,7 @@ jobs:
         os: [macOS-latest, ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Additional info about the build
         run: |
@@ -43,7 +43,7 @@ jobs:
           ulimit -a
 
       - name: Install environment
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: devtools/conda-envs/test_env.yaml
           extra-specs: |
@@ -52,12 +52,6 @@ jobs:
       - name: Install package
         run: |
           python -m pip install . --no-deps
-
-      - name: Python information
-        run: |
-          which python
-          conda info
-          conda list
 
       - name: Test the package
         run: |
