--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,19 @@
-# readthedocs.yaml
-
 version: 2
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-20.04
   tools:
     python: "mambaforge-4.10"
 
 python:
   install:
-    - method: setuptools
+    - method: pip
       path: .
 
 conda:
   environment: devtools/conda-envs/docs_env.yaml
+
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: true
+
