Dynamically load models from GitHub release assets and cache (#44)
* Add dynamic loading from release assets

* Update README

* Check hash of downloaded or cached file

* Improve tests

* Lint, defer request to function call

* Cache getter

* Prevent caching when testing without network

* Mock all network calls

* Try to mock every test

* Update dependencies

* Add to module-level import

* Also return cached_files in `list_available_nagl_models`

* Apply suggestions from code review

Co-authored-by: Jeff Wagner <jeffrey.wagner+github@openforcefield.org>

* Add developer-facing release docs

* Update test

---------

Co-authored-by: Jeff Wagner <jeffrey.wagner+github@openforcefield.org>

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -1,4 +1,4 @@
-name: test
+name: openff-nagl-models-test
 
 channels:
   - conda-forge
@@ -7,9 +7,12 @@ dependencies:
     # Base depends
   - python
   - pip
+  - platformdirs
   - versioningit
 
     # Testing
   - pytest
+  - pytest-socket
+  - pytest-randomly
   - openff-nagl-base >=0.4.0
 
