--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,11 +7,11 @@ on:
   pull_request:
     branches:
       - "main"
-  schedule:
-    # Nightly tests run on main by default:
-    #   Scheduled workflows run on the latest commit on the default or base branch.
-    #   (from https://help.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events-schedule)
-    - cron: "0 0 * * *"
+  # schedule:
+  #   # Nightly tests run on main by default:
+  #   #   Scheduled workflows run on the latest commit on the default or base branch.
+  #   #   (from https://help.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events-schedule)
+  #   - cron: "0 0 * * *"
 
 concurrency:
   # Specific group naming so CI is only cancelled
