--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,11 @@ maintainers = [
     {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
+dependencies = [
+  "platformdirs",
+  "packaging",
+]
 dynamic = ["version"]
 
 [project.optional-dependencies]
