Add type-checking to CI (#70)
* Add type-checking to CI

* Fix whitespace

* Update some annotations

* Hack?

* Update changelog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,22 @@ namespace-packages = [ "openff/interchange/" ]
 
 lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
 
+[tool.mypy]
+mypy_path = "stubs/"
+python_version = "3.11"
+warn_unused_configs = true
+warn_unused_ignores = true
+warn_incomplete_stub = true
+show_error_codes = true
+
+[[tool.mypy.overrides]]
+module = [
+    "openff.toolkit",
+    "openff.nagl.*",
+    "pytest_socket",
+]
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = [
