--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,6 +55,9 @@ jobs:
         run: |
           python -m pip install . --no-deps
 
+      - name: Run type-checking
+        run: python -m mypy -p "openff.nagl_models"
+
       - name: Test the package
         run: |
           pytest -v openff/nagl_models/tests
