Fix package data (#86)
* Fix package data

* Fix

* Format

* Fix handling test data

* Update CHANGELOG

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ name = "openff-nagl-models"
 description = "OpenFF NAGL Models"
 readme = "README.md"
 license = "MIT"
-license-files = ["LICENSE"]
+license-files = [ "LICENSE" ]
 maintainers = [
   { name = "Lily Wang", email = "lily.wang@openforcefield.org" },
 ]
@@ -39,8 +39,10 @@ urls.Documentation = "https://openff-nagl-models.readthedocs.io"
 urls.Repository = "https://github.com/openforcefield/openff-nagl-models"
 entry-points."openforcefield.nagl_model_directory".get_nagl_model_dirs_paths = "openff.nagl_models:get_nagl_model_dirs_paths"
 
-[tool.setuptools.packages]
-find = {}
+[tool.setuptools.packages.find]
+include = [ 'openff.nagl_models*' ]
+# would be nice to move tests/ -> _tests/
+# if openff/nagl_models/tests/data/ grows to be large, can exclude
 
 [tool.ruff]
 line-length = 119
